<resources>
    <string name="app_name">Идеи маникюра</string>

    <string name="json">https://manucure-3e06f.firebaseio.com/manicure.json</string>
    <string name="neednetwork">Требуется подключение к Интернету</string>

    <string name="banner_ad_app">ca-app-pub-3940256099942544~3347511713</string>
    <string name="banner_ad_bottom">ca-app-pub-7164494629924185/8582310569</string>
    <string name="banner_ad_backbutton">ca-app-pub-7164494629924185/1750552178</string>

    <string name="banner_ad_test">ca-app-pub-3940256099942544/6300978111</string>


    <string name="yandexmetrika">3295f0cd-eb23-4e81-aaa4-b424fec010af</string>

    <string name="Ideas">Идеи</string>
    <string name="ideastext">Тысячи идей для вас</string>

    <string name="articles">Статьи</string>
    <string name="articlestext">Интересное рядом</string>

    <string name="favorites">Избранное</string>
    <string name="favoritestext">Добавьте, что понравится</string>

    <string name="ourapps">Наши приложения</string>
    <string name="ourappstext">Найтиде что-то новое для себя</string>

    <string name="aboutapp">О приложении</string>
    <string name="moreaboutapp">Подробнее</string>

    <string name="indevelopiment">Раздел находится в разработке</string>
    <string name="devtext">описание ааааааааааааааа аа  ааааааааа  аааааааааааа описание ааааааааааааааа аа  ааааааааа  аааааааааааа описание ааааааааааааааа аа  ааааааааа  аааааааааааа</string>


    <string name="offer1title">Offer 1 Title</string>
    <string name="offer1text">Offer 1 Text. Offer 1 Text. Offer 1 Text. Offer 1 Text. Offer 1 Text. Offer 1 Text. Offer 1 Text. Offer 1 Text. Offer 1 Text. Offer 1 Text. Offer 1 Text. Offer 1 Text. Offer 1 Text. Offer 1 TextOffer 1 Text. Offer 1 Text. Offer 1 Text. Offer 1 Text. Offer 1 Text. Offer 1 Text. Offer 1 Text. Offer 1 Text. Offer 1 Text. Offer 1 Text. Offer 1 Text. Offer 1 Text. Offer 1 Text. Offer 1 TextOffer 1 Text. Offer 1 Text. Offer 1 Text. Offer 1 Text. Offer 1 Text. Offer 1 Text. Offer 1 Text. Offer 1 Text. Offer 1 Text. Offer 1 Text. Offer 1 Text. Offer 1 Text. Offer 1 Text. Offer 1 TextOffer 1 Text. Offer 1 Text. Offer 1 Text. Offer 1 Text. Offer 1 Text. Offer 1 Text. Offer 1 Text. Offer 1 Text. Offer 1 Text. Offer 1 Text. Offer 1 Text. Offer 1 Text. Offer 1 Text. Offer 1 Text.Offer 1 Text. Offer 1 Text. Offer 1 Text. Offer 1 Text. Offer 1 Text. Offer 1 Text. Offer 1 Text. Offer 1 Text. Offer 1 Text. Offer 1 Text. Offer 1 Text. Offer 1 Text. Offer 1 Text. Offer 1 TextOffer 1 Text. Offer 1 Text. Offer 1 Text. Offer 1 Text. Offer 1 Text. Offer 1 Text. Offer 1 Text. Offer 1 Text. Offer 1 Text. Offer 1 Text. Offer 1 Text. Offer 1 Text. Offer 1 Text. Offer 1 TextOffer 1 Text. Offer 1 Text. Offer 1 Text. Offer 1 Text. Offer 1 Text. Offer 1 Text. Offer 1 Text. Offer 1 Text. Offer 1 Text. Offer 1 Text. Offer 1 Text. Offer 1 Text. Offer 1 Text. Offer 1 TextOffer 1 Text. Offer 1 Text. Offer 1 Text. Offer 1 Text. Offer 1 Text. Offer 1 Text. Offer 1 Text. Offer 1 Text. Offer 1 Text. Offer 1 Text. Offer 1 Text. Offer 1 Text. Offer 1 Text. Offer 1 Text. </string>

    <string name="offer2title">Offer 2 Title</string>
    <string name="offer2text">Offer 2 Text. Offer 2 Text. Offer 2 Text. Offer 2 Text. Offer 2 Text. Offer 2 Text. Offer 2 Text. Offer 2 Text. Offer 2 Text. Offer 2 Text. Offer 2 Text. Offer 2 Text. Offer 2 Text. Offer 2 Text. </string>

    <string name="offer3title">Offer 3 Title</string>
    <string name="offer3text">Offer 3 Text. Offer 3 Text. Offer 3 Text. Offer 3 Text. Offer 3 Text. Offer 3 Text. Offer 3 Text. Offer 3 Text. Offer 3 Text. Offer 3 Text. Offer 3 Text. Offer 3 Text. Offer 3 Text. Offer 3 Text. Offer 3 Text. </string>

    <string name="contentdesc1">1</string>
    <string name="contentdesc2">2</string>
    <string name="contentdesc3">3</string>
    <string name="contentdesc4">4</string>
    <string name="contentdesc5">5</string>
    <string name="contentdesc6">6</string>
    <string name="contentdesc7">7</string>
    <string name="contentdesc8">8</string>
    <string name="contentdesc9">9</string>
    <string name="contentdesc10">10</string>


</resources>
