<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:clickable="false"
    android:orientation="vertical"
    tools:context=".IdeasActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_weight="1">

                    <ImageButton
                        android:id="@+id/imageBtnBack"
                        android:layout_width="56dp"
                        android:layout_height="42dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginStart="16dp"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:onClick="onClick"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/btnbackidei"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/textViewTitleIdei"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="16dp"
                        android:layout_weight="1"
                        android:text="@string/Ideas"
                        android:textAllCaps="false"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/imageBtnBack"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.2" />
                </android.support.constraint.ConstraintLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/contentdesc1"
                    android:onClick="nextPage" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/contentdesc2"
                    android:onClick="nextPage" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/contentdesc3"
                    android:onClick="nextPage" />

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/contentdesc4"
                    android:onClick="nextPage" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/contentdesc5"
                    android:onClick="nextPage" />

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/contentdesc6"
                    android:onClick="nextPage" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/contentdesc7"
                    android:onClick="nextPage" />

                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/contentdesc8"
                    android:onClick="nextPage" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:orientation="horizontal"
                android:paddingBottom="10dp">

                <ImageView
                    android:id="@+id/imageView9"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/contentdesc9"
                    android:onClick="nextPage" />

                <ImageView
                    android:id="@+id/imageView10"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/contentdesc10"
                    android:onClick="nextPage" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:adSize="BANNER"
        app:adUnitId="@string/banner_ad_bottom"
        app:layout_constraintBottom_toBottomOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </com.google.android.gms.ads.AdView>
    <!--<com.startapp.android.publish.ads.banner.Banner-->
        <!--android:id="@+id/startAppBanner"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:layout_marginBottom="10dp"-->
        <!--app:layout_constraintBottom_toBottomOf="parent"-->
        <!--app:layout_constraintEnd_toEndOf="parent"-->
        <!--app:layout_constraintHorizontal_bias="0.5"-->
        <!--app:layout_constraintStart_toStartOf="parent" />-->
</android.support.constraint.ConstraintLayout>